[package]
name = "jeremy-kun-math-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.4"
timeit = "0.1.2"
macos-perf = { version = "0.1.1", optional = true }
eyre = "0.6.5"
color-eyre = "0.5.11"
rand_chacha = "0.3.1"

[profile.release]
debug = true

[dev-dependencies]
insta = "1.10.0"

